# t-acp

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh.md
assets/: observe.html
docs/: architecture.md  architecture.zh.md
plans/: 001-tui-agent-orchestrator-daemon.md
src/: adapters.rs  api.rs  daemon.rs  http.rs  interactions.rs  internal.rs  main.rs  pty.rs  util.rs  wrapper.rs
src/adapters/: generic.rs  mod.rs  opencode.rs
