[package]
name = "t-acp"
version = "0.1.0"
edition = "2024"
description = "Foreground TUI agent wrapper with a local RPC control service"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
portable-pty = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
signal-hook = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vt100 = "0.16"
